Time: 25 ms (95.32%) | Memory: 50.1 MB (88.53%) - LeetSync